Fixed wrong font path for production build

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@
 
 @font-face {
     font-family: Sansation;
-    src: url(../public/Sansation_Regular.ttf);
+    src: url(/Sansation_Regular.ttf);
 }
 
 :root {
